--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -42,8 +42,9 @@
         </ContentControl>
 
         <Grid Grid.Column="2" Grid.ColumnSpan="2" Margin="20" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White"
-                   Text="{Binding SelectedPlayer}" FontSize="18" FontWeight="Bold" TextAlignment="Center" />
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top"
+                   Text="{Binding SelectedPlayer}" FontSize="18" Foreground="White"
+                   FontWeight="Bold" FontFamily="Comic Sans MS" TextAlignment="Center" />
         </Grid>
 
         <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center"
@@ -62,7 +63,7 @@
                        Width="350" TextAlignment="Center" Style="{StaticResource titleText}" Foreground="White" Margin="25 0"/>
             
             <StackPanel Orientation="Horizontal" Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=false}">
-                <TextBlock Text="{loc:Loc Source}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
+                <TextBlock Text="{loc:Loc Spell}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            Margin="0" Width="100" Foreground="White"/>
                 <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Sources}"
                           VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedSource}" SelectedIndex="0"/>
@@ -83,7 +84,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc Spell}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -96,46 +97,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc Damage}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn SortMemberPath="CastNumber" IsReadOnly="True" MinWidth="100">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=CastNumber}" TextAlignment="Center" Margin="10" FontSize="12" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{loc:Loc CountOfSkills}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn SortMemberPath="MinValue" IsReadOnly="True" MinWidth="150">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=MinValue}" TextAlignment="Center" Margin="10" FontSize="12" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{loc:Loc MinValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn SortMemberPath="MaxValue" IsReadOnly="True" MinWidth="150">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=MaxValue}" TextAlignment="Center" Margin="10" FontSize="12" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{loc:Loc MaxValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc Value}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -148,10 +110,11 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc AverageValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc Average}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
+
 
                 <DataGridTemplateColumn SortMemberPath="DamagePerSecond" IsReadOnly="True" MinWidth="150">
                     <DataGridTemplateColumn.CellTemplate>
@@ -161,7 +124,46 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc DamagePerSec}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc DPS}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="CastNumber" IsReadOnly="True" MinWidth="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=CastNumber}" TextAlignment="Center" Margin="10" FontSize="12" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Count}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="MaxValue" IsReadOnly="True" MinWidth="150">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=MaxValue}" TextAlignment="Center" Margin="10" FontSize="12" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Max}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="MinValue" IsReadOnly="True" MinWidth="150">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=MinValue}" TextAlignment="Center" Margin="10" FontSize="12" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Min}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -172,7 +174,7 @@
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Orientation="Horizontal">
                 <CheckBox Style="{DynamicResource CheckBoxStyle1}" VerticalContentAlignment="Center" 
-                    Content="{loc:Loc ShowFilters}" Width="125" Margin="40 5" IsChecked="{Binding IsShowFilters}" />
+                    Content="{loc:Loc Filters}" Width="125" Margin="40 5" IsChecked="{Binding IsShowFilters}" />
             </StackPanel>
 
             <DataGrid CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
@@ -180,6 +182,19 @@
                  Margin="20 10" Height="450" VerticalAlignment="Top" ItemsSource="{Binding DetailsInformations}" 
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
                 <DataGrid.Columns>
+                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="200">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Spell}" Margin="10" FontSize="12" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.HeaderTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{loc:Loc Spell}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.HeaderTemplate>
+                    </DataGridTemplateColumn>
+                    
                     <DataGridTemplateColumn SortMemberPath="Time" IsReadOnly="True" MinWidth="150">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
@@ -206,7 +221,7 @@
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{loc:Loc Damage}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                                <TextBlock Text="{loc:Loc Value}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -217,7 +232,7 @@
                                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}"
                                                    Kind="Star" Foreground="Brown" Style="{StaticResource menuButtonIcon}"
-                                                   HorizontalAlignment="Center" ToolTip="{loc:Loc CritDamage}"/>
+                                                   HorizontalAlignment="Center" ToolTip="{loc:Loc Crit}"/>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:2}"
                                                    Kind="StarCheck" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center" ToolTip="{loc:Loc Dodge}"/>
@@ -252,19 +267,6 @@
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{loc:Loc Target}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.HeaderTemplate>
-                    </DataGridTemplateColumn>
-
-                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="200">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=Spell}" Margin="10" FontSize="12" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                        <DataGridTemplateColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -315,34 +317,6 @@
                    Text="{loc:Loc Total}" FontSize="16" TextAlignment="Center"/>
             <TextBlock Margin="15 0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"
                    Text="{Binding TotalValue}" FontSize="18" TextAlignment="Center" FontWeight="Bold"/>
-        </StackPanel>
-
-        <StackPanel Margin="275 -40" Grid.Row="4" Grid.Column="3" Orientation="Horizontal"
-                    Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}">
-            <StackPanel Margin="10">
-                <CheckBox Name="dependency" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" FontSize="12" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowCritDamage}" IsChecked="{Binding IsShowCrit}" Width="150"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Name="dependency1" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowDodge}" IsChecked="{Binding IsShowDodge}" FontSize="12"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-            </StackPanel>
-            <StackPanel Margin="50 10">
-                <CheckBox Name="dependency2" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowParry}" IsChecked="{Binding IsShowParry}" FontSize="12" Width="120"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Name="dependency3" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowMiss}" IsChecked="{Binding IsShowMiss}" FontSize="12"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-            </StackPanel>
-            <StackPanel Margin="25 10">
-                <CheckBox Name="dependency4" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowResist}" IsChecked="{Binding IsShowResist}" FontSize="12" Width="120"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Name="dependency5" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowImmune}" IsChecked="{Binding IsShowImmune}" FontSize="12"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-            </StackPanel>
         </StackPanel>
     </Grid>
 </views:MvxWpfView>
