--- a/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
@@ -43,7 +43,7 @@
         <Grid Grid.Column="2" Grid.ColumnSpan="2" Margin="20" VerticalAlignment="Bottom" HorizontalAlignment="Center">
             <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White"
                    Text="{Binding SelectedPlayer}" FontSize="18"
-                   FontWeight="Bold" FontFamily="Comic Sans MS" FontStyle="Italic" TextAlignment="Center" />
+                   FontWeight="Bold" FontFamily="Comic Sans MS" TextAlignment="Center" />
         </Grid>
 
         <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center"
@@ -54,16 +54,15 @@
                 <ComboBox Style="{DynamicResource ComboBoxStyle1}" VerticalAlignment="Center" Name="detailsType"
                           Width="135" SelectedIndex="{Binding DetailsTypeSelectedIndex}">
                     <ComboBoxItem Content="{loc:Loc Common}" IsSelected="True"/>
-                    <ComboBoxItem Content="{loc:Loc MoreDetails}"/>
+                    <ComboBoxItem Content="{loc:Loc MoreDetails}" />
                 </ComboBox>
             </StackPanel>
 
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{loc:Loc Title}" Foreground="White"
-                       Width="350" TextAlignment="Center" Style="{StaticResource titleText}"
-                       Margin="25 0"/>
-            
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{loc:Loc Title}"
+                       Width="350" TextAlignment="Center" Style="{StaticResource titleText}" Foreground="White" Margin="25 0"/>
+
             <StackPanel Orientation="Horizontal" Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=false}">
-                <TextBlock Text="{loc:Loc Source}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
+                <TextBlock Text="{loc:Loc Spell}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            Margin="0" Width="100" Foreground="White"/>
                 <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Sources}"
                           VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedSource}" SelectedIndex="0"/>
@@ -84,7 +83,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc Spell}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -97,46 +96,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc Healing}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn SortMemberPath="CastNumber" IsReadOnly="True" MinWidth="100">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=CastNumber}" TextAlignment="Center" Margin="10" FontSize="12" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{loc:Loc CountOfSkills}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn SortMemberPath="MinValue" IsReadOnly="True" MinWidth="150">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=MinValue}" TextAlignment="Center" Margin="10" FontSize="12" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{loc:Loc MinValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn SortMemberPath="MaxValue" IsReadOnly="True" MinWidth="150">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=MaxValue}" TextAlignment="Center" Margin="10" FontSize="12" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{loc:Loc MaxValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc Value}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -149,7 +109,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc AverageValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc Average}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -162,7 +122,46 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc HealingPerSec}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            <TextBlock Text="{loc:Loc HPS}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="CastNumber" IsReadOnly="True" MinWidth="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=CastNumber}" TextAlignment="Center" Margin="10" FontSize="12" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Count}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="MaxValue" IsReadOnly="True" MinWidth="150">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=MaxValue}" TextAlignment="Center" Margin="10" FontSize="12" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Max}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn SortMemberPath="MinValue" IsReadOnly="True" MinWidth="150">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=MinValue}" TextAlignment="Center" Margin="10" FontSize="12" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{loc:Loc Min}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -173,13 +172,26 @@
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Orientation="Horizontal">
                 <CheckBox Style="{DynamicResource CheckBoxStyle1}" VerticalContentAlignment="Center" 
-                  Content="{loc:Loc ShowFilters}" Width="200" Margin="40 10" IsChecked="{Binding IsShowFilters}" />
+                  Content="{loc:Loc Filters}" Width="200" Margin="40 10" IsChecked="{Binding IsShowFilters}" />
             </StackPanel>
 
             <DataGrid CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                       RowStyle="{DynamicResource DataGridRowStyle1}" Style="{DynamicResource DataGridStyle1}"
                       Margin="20 10" Height="450" ItemsSource="{Binding DetailsInformations}">
                 <DataGrid.Columns>
+                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="175">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Spell}" TextAlignment="Center" Margin="10" FontSize="12" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.HeaderTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{loc:Loc Spell}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.HeaderTemplate>
+                    </DataGridTemplateColumn>
+                    
                     <DataGridTemplateColumn SortMemberPath="Time" IsReadOnly="True" MinWidth="100">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
@@ -201,7 +213,7 @@
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{loc:Loc Healing}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White" />
+                                <TextBlock Text="{loc:Loc Value}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White" />
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -211,7 +223,7 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsCrit, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Kind="LightningBolt" Foreground="Orange" Style="{StaticResource menuButtonIcon}" ToolTip="{loc:Loc CritHealing}"/>
+                                                   Kind="LightningBolt" Foreground="Orange" Style="{StaticResource menuButtonIcon}" ToolTip="{loc:Loc Crit}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -231,19 +243,6 @@
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{loc:Loc Target}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.HeaderTemplate>
-                    </DataGridTemplateColumn>
-
-                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="175">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=Spell}" TextAlignment="Center" Margin="10" FontSize="12" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                        <DataGridTemplateColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White" />
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -283,23 +282,13 @@
                 </TextBlock>
             </StackPanel>
         </StackPanel>
-        
+
         <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="-30 25"
                     Orientation="Horizontal">
             <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"
                    Text="{loc:Loc Total}" FontSize="16" TextAlignment="Center"/>
             <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"
                    Text="{Binding TotalValue}" FontSize="18" TextAlignment="Center" FontWeight="Bold"/>
-        </StackPanel>
-        
-        <StackPanel Margin="40 -20" Grid.Row="3" Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Top"
-                    Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=false}">
-            <CheckBox Name="dependency" Style="{DynamicResource CheckBoxStyle1}" Margin="0 5" Width="125" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowCrit}" IsChecked="{Binding IsShowCrit}" FontSize="14"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
-            <CheckBox Name="dependency1" Style="{DynamicResource CheckBoxStyle1}" Margin="50 5" Width="150" VerticalContentAlignment="Center" 
-                              Content="{loc:Loc ShowOverHealing}" IsChecked="{Binding IsShowOverheal}" FontSize="14"
-                              VerticalAlignment="Center" FontWeight="SemiBold" />
         </StackPanel>
     </Grid>
 </views:MvxWpfView>
