--- a/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
@@ -72,26 +72,25 @@
             <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=true}" Grid.Row="0"
                     HorizontalAlignment="Center" VerticalAlignment="Top" MinWidth="375">
                 <TextBlock HorizontalAlignment="Center" Text="{loc:Loc UploadFile}" Margin="0 20" FontSize="16" Foreground="White" />
+                <TextBlock Text="{loc:Loc ToUploadShouldBeLogin}" TextWrapping="Wrap" Height="50" Foreground="White"
+                           VerticalAlignment="Center" HorizontalAlignment="Center" Opacity="0.5"
+                           Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                 <Button Click="SelectCmbatLogFile" Content="{loc:Loc SelectFile}" Width="125" FontSize="16"
-                    Margin="15 0" Style="{StaticResource showButton}" />
+                        Margin="15 0" Style="{StaticResource showButton}"
+                        IsEnabled="{Binding IsAuth, Converter={StaticResource BoolToXAMLBool}}"/>
                 <StackPanel Orientation="Horizontal" Margin="20">
                     <TextBlock Text="{loc:Loc File}" FontSize="16" Foreground="White" />
                     <TextBlock Text="{Binding CombatLog, Mode=TwoWay}" Foreground="White" FontWeight="Bold" Margin="20 0" FontSize="14" />
                 </StackPanel>
             </StackPanel>
-            <StackPanel Grid.Row="1" IsEnabled="{Binding IsAuth, Converter={StaticResource BoolToXAMLBool}}" MaxWidth="575">
+            <StackPanel Grid.Row="1" IsEnabled="{Binding IsAuth, Converter={StaticResource BoolToXAMLBool}}" MaxWidth="500" HorizontalAlignment="Center">
                 <TextBlock Text="{loc:Loc TypeOfLogs}" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                 <StackPanel Orientation="Horizontal" Margin="20">
-                    <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Anonymous}" Width="140" Margin="20" mvx:Bi.nd="Command GetLogTypeCommand, CommandParameter=0"
-                                 IsChecked="{Binding LogType, Converter={StaticResource IntToXAMLBool}, ConverterParameter=0}" />
-                    <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Public}" Width="140" mvx:Bi.nd="Command GetLogTypeCommand, CommandParameter=1"
+                    <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Public}" Width="140" mvx:Bi.nd="Command GetLogTypeCommand, CommandParameter=0"
+                                 IsChecked="{Binding LogType, Converter={StaticResource IntToXAMLBool}, ConverterParameter=0}" Margin="20" />
+                    <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Private}" Width="140" mvx:Bi.nd="Command GetLogTypeCommand, CommandParameter=1"
                                  IsChecked="{Binding LogType, Converter={StaticResource IntToXAMLBool}, ConverterParameter=1}" Margin="20" />
-                    <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Private}" Width="140" mvx:Bi.nd="Command GetLogTypeCommand, CommandParameter=2"
-                                 IsChecked="{Binding LogType, Converter={StaticResource IntToXAMLBool}, ConverterParameter=2}" Margin="20" />
                 </StackPanel>
-                <TextBlock Text="{loc:Loc TypeOfLogsLoginRequired}" TextWrapping="Wrap" Height="50" Foreground="White"
-                           VerticalAlignment="Center" HorizontalAlignment="Center" Opacity="0.5"
-                           Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
             </StackPanel>
         </Grid>
 
@@ -128,18 +127,16 @@
                                     Visibility="{Binding CombatLogs.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
-                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="300">
-                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10"
-                                                            Visibility="{Binding Path=CombatsInQueue, Converter={StaticResource IntToVisibility}, ConverterParameter='false:0:>'}">
+                                            <StackPanel HorizontalAlignment="Center" Width="300" Margin="10">
+                                                <TextBlock TextAlignment="Center" FontSize="10" Text="{Binding Path=Date, StringFormat=MM.dd.yyyy hh:mm}" Margin="5" />
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"
+                                                            Visibility="{Binding Path=CombatsInQueue, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
                                                     <Icon:PackIconMaterial Kind="ProgressDownload" Height="15" Width="15" VerticalAlignment="Center" Margin="5 0" />
                                                     <TextBlock TextAlignment="Center" FontSize="12" Text="{Binding Path=NumberReadyCombats}" Margin="5" />
                                                     <TextBlock TextAlignment="Center" FontSize="12" Text="/" Margin="0 5" />
                                                     <TextBlock TextAlignment="Center" FontSize="12" Text="{Binding Path=CombatsInQueue}" Margin="5" />
                                                 </StackPanel>
-                                                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
-                                                    <TextBlock TextAlignment="Center" FontSize="10" Text="{Binding Path=Date, StringFormat=MM.dd.yyyy hh:mm}" Margin="5" />
-                                                    <TextBlock TextAlignment="Center" FontSize="14" Text="{Binding Path=Name}" Margin="5" />
-                                                </StackPanel>
+                                                <TextBlock TextAlignment="Center" FontSize="14" Text="{Binding Path=Name}" Margin="5" />
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
@@ -158,7 +155,7 @@
                         </StackPanel>
                     </StackPanel>
                 </TabItem>
-                <TabItem Style="{DynamicResource TabItemStyle1}" Header="{loc:Loc PrivateLogs}" FontSize="13" 
+                <TabItem Style="{DynamicResource TabItemStyle1}" Header="{loc:Loc PersonalLogs}" FontSize="13" 
                          IsEnabled="{Binding IsAuth, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=false}">
                     <StackPanel Margin="10">
                         <Icon:PackIconMaterial Kind="WindowClose" Foreground="Orange" HorizontalAlignment="Right" Cursor="Hand" Margin="0 -5">
@@ -174,7 +171,7 @@
                             <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:3:='}"/>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PrivateLogs}" Margin="0" FontSize="16" Foreground="White" />
+                                <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PersonalLogs}" Margin="0" FontSize="16" Foreground="White" />
                                 <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsByUserCommand">
                                     <Icon:PackIconMaterial Kind="Reload" Foreground="White"/>
                                 </Button>
@@ -183,8 +180,8 @@
                                 <Button mvx:Bi.nd="Command LoadCombatsByUserCommand" Content="{loc:Loc Upload}" Width="100" FontSize="16"
                                             Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}"
                                             IsEnabled="{Binding CombatListSelectedIndex, Converter={StaticResource IntToXAMLBool}, ConverterParameter='-1:>'}"
-                                            Margin="10,10" Style="{StaticResource showButton}" Foreground="Blue" HorizontalAlignment="Center"/>
-                                <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}" 
+                                            Margin="10,10" Style="{StaticResource showButton}" HorizontalAlignment="Center"/>
+                                <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}" IsEnabled="False"
                                                            Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}" mvx:Bi.nd="Command DeleteCombatCommand"
                                                            HorizontalAlignment="Center" ToolTip="{loc:Loc RemovePrivateLog}">
                                     <Icon:PackIconMaterial.InputBindings>
@@ -193,13 +190,20 @@
                                 </Icon:PackIconMaterial>
                             </StackPanel>
                             <ScrollViewer MaxHeight="200" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                                <ListBox Background="Transparent" ItemsSource="{Binding CombatLogsForTargetUser}" SelectedIndex="{Binding CombatListSelectedIndex}"
+                                <ListBox Style="{DynamicResource ListBoxStyle1}" ItemsSource="{Binding CombatLogsForTargetUser}" SelectedIndex="{Binding CombatListSelectedIndex}"
                                         Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
-                                            <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
-                                                <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
-                                                <TextBlock FontSize="14" Text="{Binding Path=Date, StringFormat=MM.dd.yyyy hh:mm}" Margin="15" />
+                                            <StackPanel HorizontalAlignment="Center" Width="300" Margin="10">
+                                                <TextBlock TextAlignment="Center" FontSize="10" Text="{Binding Path=Date, StringFormat=MM.dd.yyyy hh:mm}" Margin="5" />
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"
+                                                            Visibility="{Binding Path=CombatsInQueue, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
+                                                    <Icon:PackIconMaterial Kind="ProgressDownload" Height="15" Width="15" VerticalAlignment="Center" Margin="5 0" />
+                                                    <TextBlock TextAlignment="Center" FontSize="12" Text="{Binding Path=NumberReadyCombats}" Margin="5" />
+                                                    <TextBlock TextAlignment="Center" FontSize="12" Text="/" Margin="0 5" />
+                                                    <TextBlock TextAlignment="Center" FontSize="12" Text="{Binding Path=CombatsInQueue}" Margin="5" />
+                                                </StackPanel>
+                                                <TextBlock TextAlignment="Center" FontSize="14" Text="{Binding Path=Name}" Margin="5" />
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
@@ -218,7 +222,7 @@
                     </StackPanel>
                 </TabItem>
             </TabControl>
-            <TextBlock Text="{loc:Loc PrivateLogsLoginRequired}" TextAlignment="Center" Opacity="0.5" Foreground="White"
+            <TextBlock Text="{loc:Loc PersonalLogsLoginRequired}" TextAlignment="Center" Opacity="0.5" Foreground="White"
                        Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=false:true}"/>
         </StackPanel>
 
